@@ -4,7 +4,7 @@ Contributors: urkekg
 Donate link: http://urosevic.net/kontakt
 Requires at least: 2.6.0
 Tested up to: 2.8.4
-Stable tag: 0.0.8
+Stable tag: 0.0.9
 
 List latests N article titles from all or top level only categories and group them in category boxes organized in two columns.
 
